@@ -29,12 +29,13 @@ import static com.couchbase.client.java.kv.MutateInSpec.remove;
 import static com.couchbase.client.java.kv.MutateInSpec.upsert;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Stream;
 
 import com.couchbase.client.core.error.CasMismatchException;
+import com.couchbase.client.core.error.DocumentUnretrievableException;
 import com.couchbase.client.core.error.DurabilityImpossibleException;
 import com.couchbase.client.core.error.subdoc.PathExistsException;
 import com.couchbase.client.core.error.subdoc.PathNotFoundException;
@@ -46,7 +47,9 @@ import com.couchbase.client.java.Scope;
 import com.couchbase.client.java.json.JsonArray;
 import com.couchbase.client.java.json.JsonObject;
 import com.couchbase.client.java.kv.GetResult;
+import com.couchbase.client.java.kv.LookupInReplicaResult;
 import com.couchbase.client.java.kv.LookupInResult;
+import com.couchbase.client.java.kv.LookupInSpec;
 import com.couchbase.client.java.kv.MutateInResult;
 import com.couchbase.client.java.kv.MutateInSpec;
 import com.couchbase.client.java.kv.MutationResult;
@@ -97,7 +100,7 @@ public class SubDocument {
   static void getFunc() {
     // tag::get[]
     LookupInResult result = collection.lookupIn("hotel_1368",
-        Collections.singletonList(get("geo.lat")));
+        List.of(get("geo.lat")));
 
     try {
       String str = result.contentAs(0, String.class);
@@ -111,7 +114,7 @@ public class SubDocument {
   static void existsFunc() {
     // tag::exists[]
     LookupInResult result = collection.lookupIn("hotel_1368",
-        Collections.singletonList(exists("address.does_not_exist")));
+        List.of(exists("address.does_not_exist")));
     boolean pathExists = result.exists(0);
     System.out.println("Non-existent path exists? " + pathExists);
     // end::exists[]
@@ -120,7 +123,7 @@ public class SubDocument {
   static void combine() {
     // tag::combine[]
     LookupInResult result = collection.lookupIn("hotel_1368",
-        Arrays.asList(
+        List.of(
             get("geo.lat"), // index 0
             exists("address.does_not_exist") // index 1
         )
@@ -137,7 +140,7 @@ public class SubDocument {
   static void future() {
     // tag::get-future[]
     CompletableFuture<LookupInResult> future = collection.async().lookupIn("hotel_1368",
-        Collections.singletonList(get("geo.lat")));
+        List.of(get("geo.lat")));
 
     try {
       LookupInResult result = future.get();
@@ -152,7 +155,7 @@ public class SubDocument {
   static void reactive() {
     // tag::get-reactive[]
     Mono<LookupInResult> mono = collection.reactive().lookupIn("hotel_1368",
-        Collections.singletonList(get("geo.lat")));
+        List.of(get("geo.lat")));
 
     // Just for example, block on the result - this is not best practice
     LookupInResult result = mono.block();
@@ -162,7 +165,7 @@ public class SubDocument {
 
   static void upsertFunc() {
     // tag::upsert[]
-    collection.mutateIn("hotel_1368", Arrays.asList(upsert("email", "hotel96@hotmail.com")));
+    collection.mutateIn("hotel_1368", List.of(upsert("email", "hotel96@hotmail.com")));
     // end::upsert[]
     System.out.println("upsertFunc: hotel_1368 email");
   }
@@ -170,7 +173,7 @@ public class SubDocument {
   static void insertFunc() {
     // tag::insert[]
     try {
-      collection.mutateIn("hotel_1368", Collections.singletonList(insert("alt_email", "alt_hotel96@hotmail.com")));
+      collection.mutateIn("hotel_1368", List.of(insert("alt_email", "alt_hotel96@hotmail.com")));
     } catch (PathExistsException err) {
       System.out.println("insertFunc: exception caught, path already exists");
     }
@@ -179,15 +182,15 @@ public class SubDocument {
 
   static void multiFunc() {
     try {
-      collection.mutateIn("hotel_1368", Arrays.asList(upsert("tz", "EST")));
+      collection.mutateIn("hotel_1368", List.of(upsert("tz", "EST")));
     } catch (PathExistsException e) {
     }
     try {
-      collection.mutateIn("hotel_1368", Arrays.asList(remove("alt_email")));
+      collection.mutateIn("hotel_1368", List.of(remove("alt_email")));
     } catch (PathNotFoundException e) {
     }
     // tag::multi[]
-    collection.mutateIn("hotel_1368", Arrays.asList(remove("tz"), insert("alt_email", "hotel84@hotmail.com")));
+    collection.mutateIn("hotel_1368", List.of(remove("tz"), insert("alt_email", "hotel84@hotmail.com")));
     // end::multi[]
     System.out.println("upsertFunc: hotel_1368 alt_email");
   }
@@ -201,7 +204,7 @@ public class SubDocument {
 
     // tag::array-appendobj[]
     collection.mutateIn("hotel_1368",
-        Collections.singletonList(arrayAppend("reviews", Collections.singletonList(docContent))));
+        List.of(arrayAppend("reviews", List.of(docContent))));
     // end::array-appendobj[]
     System.out.println("arrayAppendObjFunc: hotel_1368 reviews");
   }
@@ -209,7 +212,7 @@ public class SubDocument {
   static void arrayAppendFunc() {
     // tag::array-append[]
     MutationResult result = collection.mutateIn("hotel_1368",
-        Collections.singletonList(arrayAppend("public_likes", Collections.singletonList("Mike Rutherford"))));
+        List.of(arrayAppend("public_likes", List.of("Mike Rutherford"))));
     /*
       public_likes is now:
       ["Georgette Rutherford V", "Ms. Devante Bruen", "Anderson Schmidt", "Mr. Kareem Harvey", "Tessie Shields",
@@ -226,7 +229,7 @@ public class SubDocument {
 
     // tag::array-prependobj[]
     collection.mutateIn("hotel_1501",
-        Collections.singletonList(arrayPrepend("reviews", Collections.singletonList(docContent))));
+        List.of(arrayPrepend("reviews", List.of(docContent))));
     // end::array-prependobj[]
     System.out.println("arrayAppendObjFunc: hotel_1501 reviews");
   }
@@ -234,7 +237,7 @@ public class SubDocument {
   static void arrayPrependFunc() {
     // tag::array-prepend[]
     MutationResult result = collection.mutateIn("hotel_1368",
-        Collections.singletonList(arrayPrepend("public_likes", Collections.singletonList("John Smith"))));
+        List.of(arrayPrepend("public_likes", List.of("John Smith"))));
 
     /*
       public_likes is now:
@@ -248,7 +251,7 @@ public class SubDocument {
     // tag::full_doc_replace[]
     JsonObject docContent = JsonObject.create().put("body", "value");
     collection.mutateIn("hotel_14006",
-        Arrays.asList(MutateInSpec.upsert("foo", "bar").xattr().createPath(), MutateInSpec.replace("", docContent)));
+        List.of(MutateInSpec.upsert("foo", "bar").xattr().createPath(), MutateInSpec.replace("", docContent)));
     // end::full_doc_replace[]
     System.out.println("full_doc_replaceFunc: hotel_14006 foo");
 
@@ -259,7 +262,7 @@ public class SubDocument {
     collection.upsert("my_array", JsonArray.create());
 
     collection.mutateIn("my_array",
-        Collections.singletonList(arrayAppend("", Collections.singletonList("some element"))));
+        List.of(arrayAppend("", List.of("some element"))));
     // the document my_array is now ["some element"]
     // end::array-create[]
     System.out.println("createAndPopulateArrays: my_array some element");
@@ -269,19 +272,19 @@ public class SubDocument {
   static void arrayCreate() {
     // tag::array-upsert[]
     MutateInResult result = collection.mutateIn("hotel_14225",
-        Collections.singletonList(arrayAppend("some.array", Collections.singletonList("hello world")).createPath()));
+        List.of(arrayAppend("some.array", List.of("hello world")).createPath()));
     // end::array-upsert[]
     System.out.println("arrayCreate: hotel_14225 some.array " + result);
 
   }
 
   static void arrayUnique() {
-    collection.mutateIn("hotel_14226", Arrays.asList(MutateInSpec.upsert("unique", Collections.singletonList(88))));
+    collection.mutateIn("hotel_14226", List.of(MutateInSpec.upsert("unique", List.of(88))));
     // tag::array-unique[]
-    collection.mutateIn("hotel_14226", Collections.singletonList(arrayAddUnique("unique", 95)));
+    collection.mutateIn("hotel_14226", List.of(arrayAddUnique("unique", 95)));
 
     try {
-      collection.mutateIn("hotel_14226", Collections.singletonList(arrayAddUnique("unique", 95)));
+      collection.mutateIn("hotel_14226", List.of(arrayAddUnique("unique", 95)));
       throw new RuntimeException("should have thrown PathExistsException");
     } catch (PathExistsException err) {
       System.out.println("arrayUnique: caught exception, path already exists");
@@ -290,19 +293,19 @@ public class SubDocument {
   }
 
   static void arrayInsertFunc() {
-    collection.mutateIn("hotel_1501", Arrays.asList(MutateInSpec.upsert("foo", Collections.singletonList(88))));
+    collection.mutateIn("hotel_1501", List.of(MutateInSpec.upsert("foo", List.of(88))));
     // tag::array-insert[]
     MutateInResult result = collection.mutateIn("hotel_1501",
-        Collections.singletonList(arrayInsert("foo[1]", Collections.singletonList("cruel"))));
+        List.of(arrayInsert("foo[1]", List.of("cruel"))));
     // end::array-insert[]
     System.out.println("arrayInsertFunc: hotel_1501 foo " + result);
 
   }
 
   static void counterInc() {
-    collection.mutateIn("hotel_1368", Arrays.asList(MutateInSpec.upsert("logins", 1)));
+    collection.mutateIn("hotel_1368", List.of(MutateInSpec.upsert("logins", 1)));
     // tag::counter-inc[]
-    MutateInResult result = collection.mutateIn("hotel_1368", Collections.singletonList(increment("logins", 1)));
+    MutateInResult result = collection.mutateIn("hotel_1368", List.of(increment("logins", 1)));
 
     // Counter operations return the updated count
     Long count = result.contentAs(0, Long.class);
@@ -312,10 +315,10 @@ public class SubDocument {
   }
 
   static void counterDec() {
-    collection.mutateIn("hotel_1368", Arrays.asList(MutateInSpec.upsert("logouts", 1000)));
+    collection.mutateIn("hotel_1368", List.of(MutateInSpec.upsert("logouts", 1000)));
     // tag::counter-dec[]
 
-    MutateInResult result = collection.mutateIn("hotel_1368", Collections.singletonList(decrement("logouts", 150)));
+    MutateInResult result = collection.mutateIn("hotel_1368", List.of(decrement("logouts", 150)));
     // Counter operations return the updated count
     Long count = result.contentAs(0, Long.class);
     // end::counter-dec[]
@@ -326,11 +329,55 @@ public class SubDocument {
   static void createPath() {
     // tag::create-path[]
     MutateInResult result = collection.mutateIn("hotel_1368",
-        Collections.singletonList(
+        List.of(
             upsert("level_0.level_1.foo.bar.phone", JsonObject.create().put("num", "311-555-0101").put("ext", 16))
                 .createPath()));
     // end::create-path[]
     System.out.println("createPath: hotel_1368 " + result);
+  }
+  
+  static void lookupInAnyReplica() {
+    // tag::lookup-in-any-replica[]
+    try {
+      LookupInResult result = collection.lookupInAnyReplica(
+          "hotel_1368",
+          List.of(LookupInSpec.get("geo.lat"))
+      );
+
+      String str = result.contentAs(0, String.class);
+      System.out.println("getFunc: Latitude = " + str);
+
+    } catch (PathNotFoundException e) {
+      System.out.println("The version of the document" +
+          " on the server node that responded quickest" +
+          " did not have the requested field.");
+
+    } catch (DocumentUnretrievableException e) {
+      System.out.println("Document was not present" +
+          " on any server node.");
+    }
+    // end::lookup-in-any-replica[]
+  }
+
+  static void lookupInAllReplicas() {
+    // tag::lookup-in-all-replicas[]
+    Stream<LookupInReplicaResult> results = collection.lookupInAllReplicas(
+        "hotel_1368",
+        List.of(LookupInSpec.get("geo.lat"))
+    );
+
+    results.forEach(it -> {
+      try {
+        String str = it.contentAs(0, String.class);
+        System.out.println("getFunc: Latitude = " + str);
+
+      } catch (PathNotFoundException e) {
+        System.out.println("The version of the document" +
+            " on one of the server nodes" +
+            " did not have the requested field.");
+      }
+    });
+    // end::lookup-in-all-replicas[]
   }
 
   static void concurrent() {
@@ -338,14 +385,14 @@ public class SubDocument {
     Thread thread1 = new Thread() {
       public void run() {
         collection.mutateIn("hotel_1501",
-            Collections.singletonList(arrayAppend("foo", Collections.singletonList(99))));
+            List.of(arrayAppend("foo", List.of(99))));
       }
     };
 
     Thread thread2 = new Thread() {
       public void run() {
         collection.mutateIn("hotel_1501",
-            Collections.singletonList(arrayAppend("foo", Collections.singletonList(101))));
+            List.of(arrayAppend("foo", List.of(101))));
       }
     };
     thread1.start();
@@ -369,7 +416,7 @@ public class SubDocument {
   static void cas() {
     // tag::cas[]
     GetResult doc = collection.get("hotel_1368");
-    MutationResult result = collection.mutateIn("hotel_1368", Collections.singletonList(decrement("logouts", 150)),
+    MutationResult result = collection.mutateIn("hotel_1368", List.of(decrement("logouts", 150)),
         mutateInOptions().cas(doc.cas()));
     // end::cas[]
     System.out.println("cas: hotel_1368 " + doc);
@@ -379,7 +426,7 @@ public class SubDocument {
     // tag::cas_fail[]
     GetResult doc = collection.get("hotel_1368");
     try {
-      MutationResult result = collection.mutateIn("hotel_1368", Collections.singletonList(decrement("logouts", 150)),
+      MutationResult result = collection.mutateIn("hotel_1368", List.of(decrement("logouts", 150)),
           mutateInOptions().cas(doc.cas() + 1));
     } catch (CasMismatchException e) {
       System.out.println("cas_fail: " + e);
@@ -391,7 +438,7 @@ public class SubDocument {
     try {
       // tag::old-durability[]
       MutationResult result = collection.mutateIn("hotel_1368",
-          Collections.singletonList(MutateInSpec.upsert("foo", "bar")),
+          List.of(MutateInSpec.upsert("foo", "bar")),
           mutateInOptions().durability(PersistTo.ACTIVE, ReplicateTo.ONE));
       // end::old-durability[]
       System.out.println("oldDurability: " + result);
@@ -404,7 +451,7 @@ public class SubDocument {
     try {
       // tag::new-durability[]
       MutationResult result = collection.mutateIn("hotel_1368",
-          Collections.singletonList(MutateInSpec.upsert("foo", "bar")),
+          List.of(MutateInSpec.upsert("foo", "bar")),
           mutateInOptions().durability(DurabilityLevel.MAJORITY));
       // end::new-durability[]
       System.out.println("newDurability: " + result);
